RbA Build/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Due from all the Amount Due from the Orders.</inlineHelpText>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Store_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>currently active store configuration</description>
        <label>Active Store Configuration</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Store_Configuration__c.Store__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Store_Configuration__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check if this account is active</description>
        <inlineHelpText>Check if this account is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Liab_Expire_Date__c</fullName>
        <description>Expiration Date for Auto Insurance (Vendor/Contractor), used in determining availability of Resources</description>
        <inlineHelpText>Expiration Date for Auto Insurance (Vendor/Contractor), used in determining availability of Resources</inlineHelpText>
        <label>Auto Liab Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Liab_Policy_Num__c</fullName>
        <label>Auto Liab Policy Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baan_Business_Partner_Number__c</fullName>
        <description>The vendor and contractor account&apos;s baan business partner number</description>
        <externalId>true</externalId>
        <inlineHelpText>The vendor and contractor account&apos;s baan business partner number</inlineHelpText>
        <label>Baan Business Partner Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_County__c</fullName>
        <label>Billing County</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Building Permit is populated in Code
Matching in the Municipalities table.
Matching criteria Address City and Zip code, match is found in the Municipality Match object</inlineHelpText>
        <label>Building Permit</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Building record. If the record for you are for isn&apos;t in the system, please contact your manager to have it created.</errorMessage>
            <filterItems>
                <field>Municipality__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Permit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Building Permit Dwellings</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_License_1__c</fullName>
        <label>Contractor License 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_License_2__c</fullName>
        <label>Contractor License 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <label>DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dwelling_Style__c</fullName>
        <label>Dwelling Style</label>
        <picklist>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>???</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electronic_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this vendor&apos;s purchase orders are electronically sent to Baan.</description>
        <inlineHelpText>Indicates whether this vendor&apos;s purchase orders are electronically sent to Baan.</inlineHelpText>
        <label>Electronic Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled_StoreId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>base64 encode value of the StoreID field from Enabled+</description>
        <externalId>true</externalId>
        <inlineHelpText>base64 encode value of the StoreID field from Enabled+</inlineHelpText>
        <label>Enabled+ Store Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>General_Liab_Expire_Date__c</fullName>
        <description>Expiration Date for Insurance (Vendor/Contractor), used in determining availability of Resources</description>
        <inlineHelpText>Expiration Date for Insurance (Vendor/Contractor), used in determining availability of Resources</inlineHelpText>
        <label>General Liab Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Liab_Policy_Num_c__c</fullName>
        <label>General Liab Policy Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Is this Dwelling part of an HOA?</inlineHelpText>
        <label>HOA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an HOA record.  If the record for you are for isn&apos;t in the system, please contact your manager to have it created.</errorMessage>
            <filterItems>
                <field>Municipality__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>HOA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>HOA Dwellings</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Is this Dwelling in a Historical District?</inlineHelpText>
        <label>Historical</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Historical record. If the record you are for is not in the system, please contact your manager to have it created.</errorMessage>
            <filterItems>
                <field>Municipality__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Historical</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Historical Dwellings</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <description>Finds the smallest Expiration Date for all Insurance Exp Dates(Vendor/Contractor), indicating the date which a resource becomes inactive (if one date passes)</description>
        <inlineHelpText>Finds the smallest Expiration Date for all Insurance Exp Dates(Vendor/Contractor), indicating the date which a resource becomes inactive (if one date passes)</inlineHelpText>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Agent__c</fullName>
        <label>Insurance Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <label>Insurance Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_Receiving_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this option if it&apos;s ok to receive more of this vendor&apos;s products than ordered on a purchase order.</description>
        <inlineHelpText>Select this option if it&apos;s ok to receive more of this vendor&apos;s products than ordered on a purchase order.</inlineHelpText>
        <label>Over Receiving Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The master Id coming from Pivotal</description>
        <externalId>true</externalId>
        <label>Pivotal Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <description>The primary contact on a dwelling. Updated with a declarative rollup.</description>
        <inlineHelpText>The primary contact on a dwelling</inlineHelpText>
        <label>Primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Id__c</fullName>
        <externalId>true</externalId>
        <label>Region Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Identifier__c</fullName>
        <label>Region Identifier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the Regional Manager for this Retail Location?</inlineHelpText>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Retail_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <description>Pulled from Active Store Configuration</description>
        <formula>Active_Store_Configuration__r.Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from Active Store Configuration</inlineHelpText>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shipping_County__c</fullName>
        <label>Shipping County</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The store location that this dwelling is related</description>
        <inlineHelpText>The store location that this dwelling is related</inlineHelpText>
        <label>Store Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The account must be of type &quot;Store&quot;</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Store</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dwellings</relationshipLabel>
        <relationshipName>StoreLocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <description>The store&apos;s location number.</description>
        <inlineHelpText>The store&apos;s location number.</inlineHelpText>
        <label>Store Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Account_Type__c</fullName>
        <label>Vendor Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Intercompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany Consolidation Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WorkComp_EmplLiab_ExpireDate__c</fullName>
        <description>Expiration Date for Insurance (Vendor/Contractor), used in determining availability of Resources</description>
        <inlineHelpText>Expiration Date for Insurance (Vendor/Contractor), used in determining availability of Resources</inlineHelpText>
        <label>Work Comp Empl Liab Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkComp_EmplLiab_Policy_No__c</fullName>
        <label>Work Comp Empl Liab Policy Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Built_Source__c</fullName>
        <description>Source of the year built, Zillow, Other, etc</description>
        <label>Year Built Source</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Provided by Zillow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_Built_Verification_Date__c</fullName>
        <description>The date and time that the year built was last updated or verified</description>
        <label>Year Built Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <inlineHelpText>Year the house was built</inlineHelpText>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zero_Dollar_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this is a zero dollar vendor</description>
        <inlineHelpText>Checked if this is a zero dollar vendor</inlineHelpText>
        <label>Zero Dollar Vendor</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Account_Vendor</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Vendor</value>
        </filters>
        <label>Account - Vendor</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Canvass_Markets</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Canvass Market</value>
        </filters>
        <label>Canvass Markets</label>
        <sharedTo>
            <role>CNVSS_Canvass_Mgmt</role>
            <role>Global_Access</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contractors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Contractor</value>
        </filters>
        <label>Contractors</label>
    </listViews>
    <listViews>
        <fullName>Dwellings</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Dwelling_Style__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Store_Location__c</columns>
        <columns>Regional_Manager__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dwelling</value>
        </filters>
        <label>Dwellings</label>
    </listViews>
    <listViews>
        <fullName>Finance_Companies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Finance_Company</value>
        </filters>
        <label>Finance Companies</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Year_Built__c</columns>
        <columns>Store_Location__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Service_and_Scheduling_Demo_Dwellings</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Primary_Contact__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dwelling</value>
        </filters>
        <filters>
            <field>Store_Location__c</field>
            <operation>equals</operation>
            <value>Demo Store - BW</value>
        </filters>
        <label>Service and Scheduling Demo Dwellings</label>
    </listViews>
    <listViews>
        <fullName>Store</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Regional_Manager__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Store</value>
        </filters>
        <label>*Store</label>
    </listViews>
    <listViews>
        <fullName>Stores</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Regional_Manager__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Store</value>
        </filters>
        <label>Stores</label>
    </listViews>
    <listViews>
        <fullName>Vendor_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Vendor</value>
        </filters>
        <label>Vendors</label>
    </listViews>
    <recordTypes>
        <fullName>Contractor</fullName>
        <active>true</active>
        <description>Contractor Accounts</description>
        <label>Contractor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dwelling</fullName>
        <active>true</active>
        <description>Used to support Dwelling</description>
        <label>Dwelling</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finance_Company</fullName>
        <active>true</active>
        <description>Accounts used to store companies supplying financing</description>
        <label>Finance Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Region</fullName>
        <active>true</active>
        <label>Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>Store</fullName>
        <active>true</active>
        <description>Used to track and store data releated to Retail Locations both CORO and ARO</description>
        <label>Store</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Used to track Vendors</description>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>RMSRSR_Can_only_create_Dwellings</fullName>
        <active>true</active>
        <description>This rule is used to restrict the RMS-RSR profile users from creating any type of account other than Dwellings</description>
        <errorConditionFormula>$Profile.Name == &apos;RMS-RSR&apos; &amp;&amp; 
RecordTypeId &lt;&gt;  &apos;012610000000mP4&apos; &amp;&amp;
ISNEW()</errorConditionFormula>
        <errorMessage>RMS-RSR Users can only Create Dwelling Accounts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Store_Admin_Can_only_create_Dwellings</fullName>
        <active>true</active>
        <description>This rule is used to restrict Store admins from creating any type of account other than Dwellings.</description>
        <errorConditionFormula>$Profile.Name == &apos;RMS-Store_Admin&apos; &amp;&amp; 
RecordTypeId &lt;&gt;  &apos;012610000000mP4&apos; &amp;&amp;
ISNEW()</errorConditionFormula>
        <errorMessage>Store Admin users can only Create Dwelling Accounts</errorMessage>
    </validationRules>
</CustomObject>